# python-template

./: .gitignore  README.md  prepare-env.sh  pyproject.toml
.github/workflows/: python-build.yml
src/TODO_pkg_name/: example_main.py
src/todo_pkg_name/: example_main.py
tests/: example_test.py
