[project]
name = "todo_pkg_name"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "TODO_your_name", email = "TODO_your@email.com" }]
requires-python = ">=3.12"
dependencies = [
    "seutil>=0.8.12",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "coverage[toml]>=7.11.3",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.5",
]

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

# testing (pytest) and coverage (coverage, pytest-cov)
[tool.coverage.run]
source_pkgs = ["todo_pkg_name", "tests"]
branch = true
parallel = true

[tool.coverage.paths]
todo_pkg_name = ["src/todo_pkg_name", "*/todo_pkg_name/src/todo_pkg_name"]
tests = ["tests", "*/todo_pkg_name/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.pytest.ini_options]
addopts = "--ignore=deprecated --cov --cov-report xml:cov.xml"
testpaths = ["tests"]


# linting (ruff)
[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E", # pycodestyle error
    "F", # pyflakes
    "I", # isort
]
isort.known-first-party = ["todo_pkg_name"]
